# kirigami

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KF6KirigamiMacros.cmake  README.md
autotests/: CMakeLists.txt  tst_aboutitem.qml  tst_aboutpage.qml  tst_abstractapplicationheader.qml  tst_abstractapplicationitem.qml  tst_abstractapplicationwindow.qml  tst_actiontoolbar.qml  tst_columnview.qml  tst_formlayout.qml  tst_forms.qml  tst_globaldrawer.qml  tst_headerfooterlayout.qml  tst_icon.qml  tst_listskeynavigation.qml  tst_padding.qml  tst_pageStackAttached.qml  tst_pagerow.qml  tst_scrollablepage.qml
autotests/pagepool/: tst_layers.qml  tst_pagepool.qml
autotests/wheelhandler/: tst_invokables.qml  tst_scrolling.qml
examples/Image Colors/: IconPage.qml  ImageStatsPage.qml
examples/settingscomponents/: main.qml
examples/simpleexamples/: AbstractApplicationWindow.qml  ListWithActionsExample.qml  Sidebar.qml  pagePoolFirstColumn.qml  simpleChatApp.qml
poqm/ar/: libkirigami6_qt.po
poqm/ast/: libkirigami6_qt.po
poqm/az/: libkirigami6_qt.po
poqm/bg/: libkirigami6_qt.po
poqm/ca/: libkirigami6_qt.po
poqm/ca@valencia/: libkirigami6_qt.po
poqm/cs/: libkirigami6_qt.po
poqm/da/: libkirigami6_qt.po
poqm/de/: libkirigami6_qt.po
poqm/el/: libkirigami6_qt.po
poqm/en_GB/: libkirigami6_qt.po
poqm/eo/: libkirigami6_qt.po
poqm/es/: libkirigami6_qt.po
poqm/et/: libkirigami6_qt.po
poqm/eu/: libkirigami6_qt.po
poqm/fi/: libkirigami6_qt.po
poqm/fr/: libkirigami6_qt.po
poqm/ga/: libkirigami6_qt.po
poqm/gl/: libkirigami6_qt.po
poqm/he/: libkirigami6_qt.po
poqm/hi/: libkirigami6_qt.po
poqm/hu/: libkirigami6_qt.po
poqm/ia/: libkirigami6_qt.po
poqm/id/: libkirigami6_qt.po
poqm/is/: libkirigami6_qt.po
poqm/it/: libkirigami6_qt.po
poqm/ja/: libkirigami6_qt.po
poqm/ka/: libkirigami6_qt.po
poqm/ko/: libkirigami6_qt.po
poqm/lt/: libkirigami6_qt.po
poqm/lv/: libkirigami6_qt.po
poqm/ml/: libkirigami6_qt.po
poqm/nb/: libkirigami6_qt.po
poqm/nl/: libkirigami6_qt.po
poqm/nn/: libkirigami6_qt.po
poqm/pa/: libkirigami6_qt.po
poqm/pl/: libkirigami6_qt.po
poqm/pt/: libkirigami6_qt.po
poqm/pt_BR/: libkirigami6_qt.po
poqm/ro/: libkirigami6_qt.po
poqm/ru/: libkirigami6_qt.po
poqm/sa/: libkirigami6_qt.po
poqm/sk/: libkirigami6_qt.po
poqm/sl/: libkirigami6_qt.po
poqm/sr/: libkirigami6_qt.po
poqm/sr@ijekavian/: libkirigami6_qt.po
poqm/sr@ijekavianlatin/: libkirigami6_qt.po
poqm/sr@latin/: libkirigami6_qt.po
poqm/sv/: libkirigami6_qt.po
poqm/ta/: libkirigami6_qt.po
poqm/tg/: libkirigami6_qt.po
poqm/tr/: libkirigami6_qt.po
poqm/ug/: libkirigami6_qt.po
poqm/uk/: libkirigami6_qt.po
poqm/zh_CN/: libkirigami6_qt.po
poqm/zh_TW/: libkirigami6_qt.po
src/: CMakeLists.txt  kirigami.qdocconf  kirigamiplugin.cpp  mnemonicattached.cpp  mnemonicattached.h  pagepool.cpp  pagepool.h  wheelhandler.cpp  wheelhandler.h
src/controls/: AboutItem.qml  AboutPage.qml  AbstractApplicationHeader.qml  AbstractApplicationItem.qml  AbstractApplicationWindow.qml  Action.qml  ActionTextField.qml  ActionToolBar.qml  ApplicationItem.qml  ApplicationWindow.qml  Badge.qml  CMakeLists.txt  Card.qml  CardsListView.qml  Chip.qml  ContextDrawer.qml  GlobalDrawer.qml  Heading.qml  InlineViewHeader.qml  LinkButton.qml  ListItemDragHandle.qml  ListSectionHeader.qml  LoadingPlaceholder.qml  NavigationTabBar.qml  NavigationTabButton.qml  OverlayDrawer.qml  OverlaySheet.qml  Page.qml  PageRow.qml  PlaceholderMessage.qml  ScrollablePage.qml  SearchField.qml  SelectableLabel.qml  SwipeListItem.qml  UrlButton.qml  kirigamicontrolsplugin.cpp
src/controls/private/: ActionMenuItem.qml  ActionsMenu.qml  BannerImage.qml  ContextDrawerActionItem.qml  DefaultCardBackground.qml  DefaultChipBackground.qml  GlobalDrawerActionItem.qml  PassiveNotificationsManager.qml  PrivateActionToolButton.qml  PullDownIndicator.qml
src/controls/templates/: qmldir  (+3 more)
src/delegates/: TitleSubtitle.qml  TitleSubtitleWithActions.qml
src/dialogs/: CMakeLists.txt  Dialog.qml  DialogFooter.qml  DialogFooterButtonContent.qml  DialogHeader.qml  DialogHeaderTopContent.qml  MenuDialog.qml  PromptDialog.qml  SearchDialog.qml
src/forms/: CMakeLists.txt  formalignmentgroup.cpp  formalignmentgroup_p.h  kirigamiformsplugin.h
src/layouts/: CMakeLists.txt  ColumnViewSeparator.qml  FormLayout.qml  columnview.cpp  columnview.h  columnview_p.h  displayhint.h  headerfooterlayout.h  layout-resources.qrc  pagestackattached.h  toolbarlayout.cpp
src/platform/: CMakeLists.txt  basictheme.cpp  colorutils.h  kirigamiplatform.qdocconf  platformtheme.cpp  platformtheme.h  settings.h  stylehints.cpp  stylehints.h  styleselector.cpp  styleselector.h  units.h
src/primitives/: CMakeLists.txt  IconPropertiesGroup.qml  Separator.qml  ShadowedImage.qml  alignedsizeattached.h  icon.cpp  icon.h  shaders.cmake  shadowedrectangle.cpp  shadowedrectangle.h  shadowedtexture.cpp
src/primitives/scenegraph/: shadermaterial.cpp  shadermaterial.h  shadernode.cpp  shadernode.h  shadowedrectanglenode.cpp  shadowedrectanglenode.h  shadowedtexturenode.cpp  shadowedtexturenode.h  softwarerectanglenode.cpp  softwarerectanglenode.h
src/primitives/shaders/: shadowedrectangle.frag
src/templates/: AbstractApplicationHeader.qml  AbstractCard.qml  AppHeaderSizeGroup.qml  Badge.qml  CMakeLists.txt  Heading.qml  InlineMessage.qml  NavigationTabBar.qml  OverlayDrawer.qml  OverlaySheet.qml
templates/kirigami6/: CMakeLists.txt  kirigami.kdevtemplate  org.kde.%{APPNAMELC}.json
tests/: ShadowedImageTest.qml  iconTest.qml
tests/wheelhandler/: WheelHandlerFlickableTest.qml  WheelHandlerScrollViewTest.qml
(+25 files in other folders)
